# galois-field

./: .gitignore  ChangeLog.md  LICENSE  README.md  README.notex.md  README.tex.md  galois-field.cabal  package.yaml  stack.yaml
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: cabal.yml  stack.yml
bench/: Main.hs
bench/Bench/: Binary.hs  Extension.hs  Galois.hs  Prime.hs
benchmarks/: Benchmarks.hs  BinaryFieldBenchmarks.hs  ExtensionFieldBenchmarks.hs  GaloisFieldBenchmarks.hs  Main.hs  PrimeFieldBenchmarks.hs
src/: AdicField.hs  BinaryField.hs  ExtensionField.hs  GaloisField.hs  PolynomialRing.hs  PrimeField.hs
src/Data/Field/: Galois.hs
src/Data/Field/Galois/: Base.hs  Binary.hs  Extension.hs  Frobenius.hs  Galois.hs  Prime.hs  Sqrt.hs  Tower.hs  Unity.hs
test/: Main.hs
test/Test/: Binary.hs  Extension.hs  Galois.hs  Prime.hs
tests/: BinaryFieldTests.hs  ExtensionFieldTests.hs  GaloisFieldTests.hs  Main.hs  PolynomialRingTests.hs  PrimeFieldTests.hs
