cabal-version:      3.0
name:               galois-field
version:            1.0.3
synopsis:           Galois field library
description:
  An efficient implementation of Galois fields used in cryptography research

category:           Cryptography
homepage:           https://github.com/adjoint-io/galois-field#readme
bug-reports:        https://github.com/adjoint-io/galois-field/issues
maintainer:         Adjoint Inc (info@adjoint.io)
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.notex.md
  ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/adjoint-io/galois-field

library
  exposed-modules:    Data.Field.Galois
  other-modules:
    Data.Field.Galois.Base
    Data.Field.Galois.Binary
    Data.Field.Galois.Extension
    Data.Field.Galois.Frobenius
    Data.Field.Galois.Prime
    Data.Field.Galois.Sqrt
    Data.Field.Galois.Tower
    Data.Field.Galois.Unity

  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedLists
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TypeFamilies

  ghc-options:        -freverse-errors -O2 -Wall
  build-depends:
    , base            >=4.10   && <5
    , bitvec          ^>=1.0.2
    , groups          >=0.4.1  && <0.6
    , integer-gmp     ^>=1.0.2
    , mod             ^>=0.1.0
    , MonadRandom     ^>=0.5.1
    , poly            >=0.3.2  && <0.5
    , protolude       ^>=0.3
    , QuickCheck      >=2.13   && <2.15
    , semirings       ^>=0.5
    , vector          ^>=0.12.0
    , wl-pprint-text  ^>=1.2.0

  default-language:   Haskell2010

test-suite galois-field-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    Test.Binary
    Test.Extension
    Test.Galois
    Test.Prime

  hs-source-dirs:     test
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedLists
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TypeFamilies

  ghc-options:        -freverse-errors -O2 -Wall
  build-depends:
    , base              >=4.10   && <5
    , bitvec            ^>=1.0.2
    , galois-field
    , groups            >=0.4.1  && <0.6
    , integer-gmp       ^>=1.0.2
    , mod               ^>=0.1.0
    , MonadRandom       ^>=0.5.1
    , poly              >=0.3.2  && <0.5
    , protolude         ^>=0.3
    , QuickCheck        >=2.13   && <2.15
    , semirings         ^>=0.5
    , tasty             >=1.2   && <1.4
    , tasty-quickcheck  ^>=0.10
    , vector            ^>=0.12.0
    , wl-pprint-text    ^>=1.2.0

  default-language:   Haskell2010

benchmark galois-field-benchmarks
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    Bench.Binary
    Bench.Extension
    Bench.Galois
    Bench.Prime

  hs-source-dirs:     bench
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedLists
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TypeFamilies

  ghc-options:        -freverse-errors -O2 -Wall
  build-depends:
    , base            >=4.10   && <5
    , bitvec          ^>=1.0.2
    , criterion       ^>=1.5
    , galois-field
    , groups          >=0.4.1  && <0.6
    , integer-gmp     ^>=1.0.2
    , mod             ^>=0.1.0
    , MonadRandom     ^>=0.5.1
    , poly            >=0.3.2  && <0.5
    , protolude       ^>=0.3
    , QuickCheck      >=2.13   && <2.15
    , semirings       ^>=0.5
    , vector          ^>=0.12.0
    , wl-pprint-text  ^>=1.2.0

  default-language:   Haskell2010
